# TFLlib

./: .gitignore  README.md  main.py  opensource.md  pyproject.toml  run_exp_backdoor.py  run_exp_byzantine.py  run_exp_inversion.py
examples/: run_exp_backdoor.py  run_exp_lia.py
flcore/: config.py
flcore/clients/: clientavg.py  clientbase.py  clientdyn.py  clientmoon.py  clientprox.py  clientscaffold.py
flcore/fedatasets/: __init__.py  basedataset.py  data.py
flcore/fedatasets/other/: adult.py  agnews.py  cifar10.py  cifar100.py  cinic10.py  creditcard.py  femnist.py  gleam.py  heart.py  imdb.py  purchase100.py  sent140.py  texas100.py  tinyimagenet.py  ucihar.py
flcore/fedatasets/utils/: __init__.py  simulation.py  split.py  transform.py
flcore/models/: __init__.py  albert.py  basehead.py  bert.py  deepspeech.py  electra.py  harcnn.py  inception3.py  lenet.py  logreg.py  m5.py  minilm.py  mobilebert.py  mobilenet.py  mobilenext.py  model_utils.py  resnet.py  rnn.py  sent140lstm.py  shufflenet.py  simplecnn.py  squeezenet.py  squeezenext.py  stackedlstm.py  stackedtransformer.py  tinybert.py  vgg.py
flcore/security/attack/: __init__.py
flcore/security/defense/: RFA_defense.py  bulyan_defense.py  cclip_defense.py  coordinate_wise_median_defense.py  (+17 more)
flcore/servers/: server_route.py  serveravg.py  serverbase.py  serverdyn.py  servergen.py  servermoon.py  serverntd.py  serverprox.py  serverscaffold.py
flcore/simulation/: __init__.py  communication_hetero.py  device_hetero.py  system_hetero.py
flcore/utils/: __init__.py  info.py  logger.py  result_utils.py
(+80 files in other folders)
