[project]
name = "TFLlib"
version = "0.1.0"
description = "Trustworthy Federated Learning Library and Benchmark"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "xaddwell", email = "xaddwell@zju.edu.cn"}
]
requires-python = ">=3.12"
dependencies = [
    "calmsize==0.1.3",
    "common==0.1.2",
    "cvxopt==1.3.2",
    "datasets==4.4.1",
    "dp==1.0",
    "h5py>=3.10",
    "lightgbm==4.6.0",
    "lpips==0.1.4",
    "matplotlib==3.5.2",
    "numpy>=1.26",
    "pandas==1.4.4",
    "pillow==12.0.0",
    "pynvml==13.0.1",
    "pytorch-wavelets==1.3.0",
    "pyyaml==6.0.3",
    "scikit-learn>=1.6",
    "scipy>=1.12",
    "spacy==3.8.7",
    "torch==2.9.0",
    "torchvision==0.24",
    "tqdm==4.66.3",
    "transformers==4.57.1",
]

[tool.setuptools.packages.find]
include = ["TFLlib"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[project.urls]
Homepage = "https://github.com/xaddwell/TFLlib"
Repository = "https://github.com/xaddwell/TFLlib"